k8s/apps/base/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: asrp
spec:
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 4000
      targetPort: 4000
